--- a/app/catalog.html
+++ b/app/catalog.html
@@ -8,18 +8,18 @@
   <!-- Main css file -->
   <link rel="stylesheet" href="css/main.css">
   <!-- Page css file -->
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/catalog.css">
 </head>
 <body>
   <header>
     header here
 </header>
-  <div class="">this is index page</div>
-  <a href="/catalog.html">catalog</a>
+  <div class="">catalog page</div>
+  <a href="/">index</a>
   <footer>
     footer here
 </footer>
   <!-- Page js file -->
-  <script src="js/index.js"></script>
+  <script src="js/catalog.js"></script>
 </body>
 </html>
