--- a/app/html/index.html
+++ b/app/html/index.html
@@ -11,14 +11,10 @@
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-  <header>
-    header here
-</header>
+  ${require('./_header.html')}
   <div class="">this is index page</div>
   <a href="/catalog.html">catalog</a>
-  <footer>
-    footer here
-</footer>
+  ${require('./_footer.html')}
   <!-- Page js file -->
   <script src="js/index.js"></script>
 </body>
